--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jss.inventoryApi</groupId>
+    <groupId>com.github.jonagamerpro1234</groupId>
     <artifactId>InventoryApi</artifactId>
-    <version>0.0.0-a.1</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>InventoryApi</name>
+    <description>API para crear inventarios personalizados en Spigot</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/jonagamerpro1234/InventoryApi</url>
+        </repository>
+    </distributionManagement>
+
     <build>
-        <defaultGoal>clean package</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -38,6 +45,9 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -72,7 +82,6 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>25.0.0</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
