add more functions... and more...

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: InventoryApi
 version: '0.0.0-a.1'
-main: jss.inventoryApi.InventoryApi
+main: jss.inventoryApi.api.InventoryApi
 api-version: '1.20'
 author: SrJss[jonagamerpro1234]
